# IronEngine-RL

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SOUL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: anomaly-detection-and-safety.md  api-reference.md  custom-robots-and-sensors.md  customization.md  developer-guide.md  examples-and-workflows.md  examples-matrix.md  figure-7-1-mapping.md  framework-architecture.md  index.md  llm-task-and-soul.md  logging-and-outputs.md  plugins-and-extensions.md  profiles-and-configuration.md  references.md  repository-layout.md  roadmap.md  software-setup.md  troubleshooting.md
profiles/armsmart_hil/: profile.json
profiles/armsmart_mock/: profile.json
profiles/custom_hardware_generic/: profile.json
profiles/framework_customizable/: profile.json
profiles/hardware_template/: profile.json
profiles/hardware_udp_generic/: profile.json
profiles/model_weights/: linear_policy.json
profiles/module_templates/: cloud_prompt_provider.json  evaluation_tabletop_grasp.json  lmstudio_prompt_provider.json  ollama_prompt_provider.json  pytorch_trainable_provider.json
profiles/multi_camera_custom_sensor/: profile.json
profiles/replay_camera/: vision_features.json
profiles/sim_minimal/: profile.json
tests/: test_custom_modules.py  test_framework.py  test_integrations.py  test_repository.py  test_smoke.py
tools/: run_armsmart_pytorch_grasp_trial.py  run_ollama_target_selection_trial.py  run_task_oriented_multi_object_grasp_trial.py
user_modules/: __init__.py
(+111 files in other folders)
